--- a/templates/footer.html
+++ b/templates/footer.html
@@ -51,7 +51,7 @@ names
 </blockquote>
 <p>
 Any errors remaining are solely the fault of
-<a href="TODO">Susan the Scapegoat</a>.
+<a href="{{root}}/suzie.png">Suzie the Scapegoat</a>.
 </p>
 <p style="text-align:center">
 . . .
