--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -119,9 +119,7 @@
             <div id="crt_lines"></div>
             <div id="static"></div>
             {% if isFrontpage %}
-            <video id="dancing" loop muted autoplay width="400">
-    			<source src="media/splash/noone.webm" type="video/webm">
-    		</video>
+            <img id="dancing" width="400" src="media/splash/noone.png"/>
             {% endif %}
         </div>
         {% if isFrontpage %}
@@ -229,8 +227,8 @@
 			change style 😎
 		</div>
         <!--
-        TODO
 		<div id="tab_sub">
+            TODO: CREDITS & Signup for notifications
 			<div></div>
 			subscribe 💖
 		</div>
