--- a/templates/next_page_button.html
+++ b/templates/next_page_button.html
@@ -2,7 +2,7 @@
     {% if isFrontpage %} href="p1" {% endif %}
     {% if isPartOne %} href="../p2" {% endif %}
     target="_self">
-<div id="next_button">
+<div id="next_button" {{ 'class="unfinished"' if isPartOne }}>
     <div id="nb--crt_lines"></div>
     <div id="nb--static"></div>
     <div id="nb--words">
@@ -14,3 +14,13 @@
     </div>
 </div>
 </a>
+{% if isPartOne %}
+<div style="height:0; position:relative">
+    <img style="display: block;
+  margin: 0 auto;
+  width: 250px;
+  position: relative;
+  top: -160px;"
+  src='{{root}}/media/misc/unfinished.png'/>
+</div>
+{% endif %}
