--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,1 +1,1 @@
-<iframe src='../signup/signup.html' width='640' height='200'></iframe>
+<iframe src='../signup/' width='640' height='200' class='signup_iframe'></iframe>
