fixed ipad/responsive rendering, also more GitHub credits

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -41,14 +41,49 @@ Special thanks to these teens at Hack Club for
 beta-reading & giving feedback on this piece:
 </p>
 <blockquote>
-names
+
+Arthur Beck,
+Atharv Gupta,
+Brendan Lee,
+Celeste,
+Charalampos Fanoulis,
+Charlie,
+Cheru Berhanu,
+Claire Wang,
+Elijah,
+Fred Han,
+Gia Bách Nguyễn,
+Hajrah Siddiqui,
+Jakob,
+Joseph Ross,
+Kieran Klukas,
+Lexi Mattick,
+Mason Meirs,
+Michael Panait,
+Nick Zandbergen,
+Nila Palmo Ram,
+Pixelglide,
+py660,
+River Lewis,
+Samuel Cottrell,
+Samuel Fernandez,
+Saran Wagner,
+Skyler Grey,
+S P U N G E,
+Vihaan Sondhi
+
 </blockquote>
 <p>
 Also thank you to these non-teenagers for giving feedback:
 </p>
+
 <blockquote>
-names
+B Cavello,
+Kara Massie,
+Paul Dancstep,
+Tobias Rose-Stockwell
 </blockquote>
+
 <p>
 Any errors remaining are solely the fault of
 <a href="{{root}}/suzie.png">Suzie the Scapegoat</a>.
