--- a/styles/page.css
+++ b/styles/page.css
@@ -686,6 +686,9 @@ input#submit:hover{
 }
 #footer blockquote{
     margin-top: 1em;
+    color: #888;
+    font-size: 0.8em;
+    text-align: left;
 }
 #footer a{
     color: hsl(0, 100%, 70%);
