twitter card and new p1 thumb

--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -24,6 +24,10 @@
 	<meta property="og:type" content="website">
 	<meta property="og:image" content="{{ share_image }}">
 	<meta property="og:description" content="{{ share_desc }}">
+    <meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="{{ title }}">
+	<meta name="twitter:description" content="{{ share_desc }}">
+	<meta name="twitter:image" content="{{ share_image }}">
 
 	<!-- STYLES -->
 	<link rel="stylesheet" href="{{root}}styles/Merriweather/merriweather.css">
