--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,1 +1,2 @@
-<iframe src='../signup/' width='640' height='200' class='signup_iframe'></iframe>
+<div style="width:100%;height:500px;" data-fillout-id="hX3xJuTcdVus" data-fillout-embed-type="standard" data-fillout-inherit-parameters data-fillout-dynamic-resize data-fillout-domain="forms.hackclub.com"></div>
+<script defer src="https://server.fillout.com/embed/v1/"></script>
