--- a/templates/footer.html
+++ b/templates/footer.html
@@ -30,7 +30,7 @@ Also, Nicky has a
 &
 <a href="https://ko-fi.com/nickycase">Ko-Fi</a>.
 (p.s:
-<a href="{{root}}/signup/supporters-p1.html">thank-you page for my supporters!</a>)
+<a href="{{root}}signup/supporters-p1.html">thank-you page for my supporters!</a>)
 </p>
 <p style="text-align:center">
 . . .
@@ -86,7 +86,7 @@ Tobias Rose-Stockwell
 
 <p>
 Any errors remaining are solely the fault of
-<a href="{{root}}/suzie.png">Suzie the Scapegoat</a>.
+<a href="{{root}}suzie.png">Suzie the Scapegoat</a>.
 </p>
 <p style="text-align:center">
 . . .
