--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,14 +5,20 @@ in collaboration with
 <a href="https://hackclub.com/">Hack Club</a>.
 </p>
 <p>
-🦕 <b>Hack Club</b>
-is a non-profit to help teens <i>help each other</i> learn to code & create.
-Learning, by making stuff you actually care about!
-Where it's not "cheating" to team up with friends!
-Gee, what a concept!
+🦕 <a href="https://ncase.me"><b>Hack Club</b></a>
+is a nonprofit where teenagers code awesome projects together -
+like <a href="https://cpu.land">cpu.land</a>,
+<a href="https://sinerider.com">SineRider</a>,
+and this!
+Join
+<a href="https://hackathons.hackclub.com">in-person hackathons</a>,
+run a
+<a href="https://hackclub.com/clubs/">club at your school</a>,
+and
+<a href="https://hackclub.com/slack/">connect with other friendly teenagers</a>.
 </p>
 <p>
-😻 <b>Nicky Case</b>
+😻 <a href="https://ncase.me"><b>Nicky Case</b></a>
 is fifteen cats in a trenchcoat.
 She makes internet playthings, like
 <a href="https://ncase.me/trust/">The Evolution of Trust</a>,
@@ -75,11 +81,11 @@ Vihaan Sondhi
 </blockquote>
 <p>
 Also thank you to these non-teenagers for giving feedback:
+(Though I assume they were teenagers at <i>some</i> point)
 </p>
 
 <blockquote>
 B Cavello,
-Kara Massie,
 Paul Dancstep,
 Tobias Rose-Stockwell
 </blockquote>
