--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -100,7 +100,6 @@
 	<div id="panel_share">share on... w/e</div>
     <!-- SHILLING FOR BIG NICKY -->
 	<div id="panel_sub">
-        <!-- TODO: shill for Hack Club instead -->
     </div>
     <div id="panel_support"></div>
 
@@ -236,7 +235,7 @@
 		</div>
         <!--
 		<div id="tab_sub">
-            TODO: CREDITS & Signup for notifications
+            CREDITS & Signup for notifications
 			<div></div>
 			subscribe 💖
 		</div>
@@ -263,7 +262,6 @@
 </p>
 <p>
     Also, expandable "Nutshells" that make good standalone bits:
-    (TODO: how to embed, hover & use icon)
 </p>
 {% if isFrontpage %}
 <p>
