a bunch of tiny fixes

--- a/styles/page.css
+++ b/styles/page.css
@@ -686,7 +686,7 @@ input#submit:hover{
 }
 .NEXT_ARROW img{
     position: absolute;
-    width: 120px;
+    height: 150px;
     border: none !important;
     max-width: none !important;
 }
