--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -275,11 +275,15 @@
 </p>
 {% elif isPartOne %}
 <p>
+    <a href="#CapabilitiesNotIntelligence">: Why say "Capabilities", not "Intelligence"</a>
+    <br>
     <a href="#WhatsXOR">: What's XOR?</a>
     <br>
     <a href="#SadAIHistory">: The sad depressing story behind Artificial Neural Networks</a>
     <br>
     <a href="#OneIsTwo">: What if System 2 reasoning <i>is just</i> a bunch of System 1 reflexes?</a>
+    <br>
+    <a href="#AIOrganizations">: A not-rigorous, unprofessional list of Who's Who in AI/Safety</a>
 </p>
 {% endif %}
     </div>
