Added Anki link, also credit another friend I forgot to credit earlier

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -85,6 +85,7 @@ Also thank you to these non-teenagers for giving feedback:
 </p>
 
 <blockquote>
+Alex Kreitzberg,
 B Cavello,
 Paul Dancstep,
 Tobias Rose-Stockwell
