word concise fix

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -27,10 +27,7 @@ She makes internet playthings, like
 </p>
 <p>
 💸 If you're <i>not</i> a teen, and are an AI moneybags person,
-click these links to
-<a href="https://hackclub.com/philosophy/">learn more about Hack Club</a>
-and how to
-<a href="https://hackclub.com/philanthropy/">support them!</a>
+<a href="https://hackclub.com/philanthropy/">learn how to support Hack Club!</a>
 Also, Nicky has a
 <a href="https://www.patreon.com/ncase">Patreon</a>
 &
