--- a/templates/footer.html
+++ b/templates/footer.html
@@ -33,7 +33,7 @@ Also, Nicky has a
 &
 <a href="https://ko-fi.com/nickycase">Ko-Fi</a>.
 (p.s:
-<a href="{{root}}signup/supporters-p1.html">thank-you page for my supporters!</a>)
+<a href="{{root}}signup/supporters-p2.html">thank-you page for my supporters!</a>)
 </p>
 <p style="text-align:center">
 . . .
@@ -45,6 +45,8 @@ beta-reading & giving feedback on this piece:
 </p>
 <blockquote>
 
+<p>
+<b>Intro & Part 1:</b>
 Arthur Beck,
 Atharv Gupta,
 Brendan Lee,
@@ -74,6 +76,16 @@ Saran Wagner,
 Skyler Grey,
 S&nbsp;P&nbsp;U&nbsp;N&nbsp;G&nbsp;E,
 Vihaan Sondhi
+</p>
+
+<p>
+<b>Part 2:</b>
+Nanda White,
+Nila Palmo Ram,
+rivques,
+Rohan K,
+Samuel Fernandez
+</p>
 
 </blockquote>
 <p>
@@ -82,10 +94,22 @@ Also thank you to these non-teenagers for giving feedback:
 </p>
 
 <blockquote>
+<p>
+<b>Intro & Part 1:</b>
 Alex Kreitzberg,
 B Cavello,
 Paul Dancstep,
 Tobias Rose-Stockwell
+</p>
+
+<p>
+<b>Part 2:</b>
+Egg Syntax,
+Max Wofford,
+Mithuna Yoganathan,
+Tobias Rose-Stockwell
+</p>
+
 </blockquote>
 
 <p>
