--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -171,6 +171,18 @@
             </div>
         </div>
 
+        {% elif isPartThree %}
+
+        <div id="header_words">
+            <div id="title">
+                P<span style="position: relative;left: -7px;">A</span>RT
+                THREE
+            </div>
+            <div id="subtitle">
+                The Proposed Solutions
+            </div>
+        </div>
+
         {% endif %}
 	</div>
 
@@ -211,8 +223,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING HALLOWEEN 2024, probably"
-                onclick="alert('COMING HALLOWEEN 2024, probably')">
+                title="COMING MID-DECEMBER 2024, probably"
+                onclick="alert('COMING MID-DECEMBER 2024, probably')">
                 <div>
                     <span class='chapter-nav-desktop'>
                         part 3<br>solutions?
@@ -223,8 +235,8 @@
                 </div>
             </a>
             <a target="_self" href="#"
-                title="COMING HALLOWEEN 2024, probably"
-                onclick="alert('COMING HALLOWEEN 2024, probably')">
+                title="COMING MID-DECEMBER 2024, probably"
+                onclick="alert('COMING MID-DECEMBER 2024, probably')">
                 <div style="border-right:1px solid rgba(128,128,128,0.8);">
                     <span class='chapter-nav-desktop'>
                         conclusion
