--- a/templates/next_page_button.html
+++ b/templates/next_page_button.html
@@ -1,8 +1,10 @@
 <a
     {% if isFrontpage %} href="p1" {% endif %}
     {% if isPartOne %} href="../p2" {% endif %}
+    {% if isPartTwo %} href="../p3" {% endif %}
+    {% if isPartThree %} href="../conclusion" {% endif %}
     target="_self">
-<div id="next_button" {{ 'class="unfinished"' if isPartTwo }}>
+<div id="next_button">
     <div id="nb--crt_lines"></div>
     <div id="nb--static"></div>
     <div id="nb--words">
@@ -12,6 +14,8 @@
             <b>PART TWO →</b>
         {% elif isPartTwo %}
             <b>PART THREE →</b>
+        {% elif isPartThree %}
+            <b style="font-size:78px">CONCLUSION →</b>
         {% endif %}
     </div>
 </div>
