--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -347,7 +347,27 @@
 </p>
 {% elif isPartThree %}
 <p>
-    TODO
+    <a href="#SwissCheese">: More about the Swiss Cheese Model</a>
+    <br>
+    <a href="#RobustChainMath">: The math of robust scalable oversight</a>
+    <br>
+    <a href="#ScalableOversightExtras">: Scalable Oversight, extra notes</a>
+    <br>
+    <a href="#IDA">: Iterated Distillation & Amplification, explained</a>
+    <br>
+    <a href="#CriticalMassComic">: (deleted scene) "Critical Mass" Comic</a>
+    <br>
+    <a href="#FutureLivesFixes">: Fixes for the "Future Lives" Algorithm</a>
+    <br>
+    <a href="#AISelfMod">: Informal literature review of "Self-modifying Agents"</a>
+    <br>
+    <a href="#WorstOrAverage">: Pros & Cons of Worst/Average/Best-Case optimization</a>
+    <br>
+    <a href="#LearnValuesExtraNotes">: Learning out values, extra notes</a>
+    <br>
+    <a href="#EconomicsAI">: Economics of AI</a>
+    <br>
+    <a href="#HumanLLMAdvantages">: Advantages of Humans vs LLMs</a>
 </p>
 {% endif %}
     </div>
