--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -236,10 +236,9 @@
                     </span>
                 </div>
             </a>
-            <a target="_self" href="#"
-                title="COMING START OF DECEMBER 2025"
-                onclick="alert('COMING START OF DECEMBER 2025')">
-                <div>
+            <a target="_self" href="{{root}}p3"
+                class="live">
+                <div {{ 'selected' if isConclusion }} >
                     <span class='chapter-nav-desktop'>
                         part 3<br>solutions?
                     </span>
@@ -248,9 +247,8 @@
                     </span>
                 </div>
             </a>
-            <a target="_self" href="#"
-                title="COMING START OF DECEMBER 2025"
-                onclick="alert('COMING START OF DECEMBER 2025')">
+            <a target="_self" href="{{root}}conclusion"
+                class="live">
                 <div style="border-right:1px solid rgba(128,128,128,0.8);">
                     <span class='chapter-nav-desktop'>
                         conclusion
