--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -361,7 +361,7 @@
     <br>
     <a href="#WorstOrAverage">: Pros & Cons of Worst/Average/Best-Case optimization</a>
     <br>
-    <a href="#LearnValuesExtraNotes">: Learning out values, extra notes</a>
+    <a href="#LearnValuesExtraNotes">: Learning our values, extra notes</a>
     <br>
     <a href="#EconomicsAI">: Economics of AI</a>
     <br>
