fix p3 navigation on top nav bar

--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -238,7 +238,7 @@
             </a>
             <a target="_self" href="{{root}}p3"
                 class="live">
-                <div {{ 'selected' if isConclusion }} >
+                <div {{ 'selected' if isPartThree }} >
                     <span class='chapter-nav-desktop'>
                         part 3<br>solutions?
                     </span>
